--- a/index.html
+++ b/index.html
@@ -290,7 +290,8 @@
     }
   </style>
   <title>Daniel Markovits</title>
-  <link href="http://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet" type="text/css" />
+  <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
+  <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css" />
 
 </head>
 
