--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     .subtitle {
       font-style: italic;
-      font-family: Montserrat;
+      font-family: Open Sans;
       font-size: .6rem;
       text-align: center;
       transition: font-size .4s;
@@ -173,7 +173,7 @@
     .footer a {
       font-size: .55rem;
       color: rgba(198, 198, 198, 0.7);
-      font-family: "Montserrat";
+      font-family: "Open Sans";
       text-transform: uppercase;
       text-decoration: none
     }
@@ -290,8 +290,7 @@
     }
   </style>
   <title>Daniel Markovits</title>
-  <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
-  <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css" />
+  <link href="http://fonts.googleapis.com/css?family=Roboto|Open+Sans" rel="stylesheet" type="text/css" />
 
 </head>
 
